[package]
name = "escpos-db"
description = "Rust bindings to the ESC/POS printer database"
repository = "https://github.com/coolreader18/escpos-db-rs"
license = "MIT"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"

[workspace]
members = [".", "codegen"]

[dependencies]
bitflags = "2.6.0"
phf = "0.11.2"
